syntax = "proto3";
package douyin.extra.second;
option go_package = "../pb;pb";

service DouyinMessageService { // 消息服务
  rpc GetMessage(douyin_message_chat_request) returns (douyin_message_chat_response); // 聊天消息
  rpc SendMessage(douyin_message_action_request) returns (douyin_message_action_response); // 聊天消息
}

message douyin_message_chat_request { // 聊天消息请求
  string token = 1; // 用户鉴权token
  int64 to_user_id = 2; // 对方用户id
  int64 pre_msg_time = 3; // 上次最新消息的时间（新增字段-apk更新中）
}

message douyin_message_chat_response { // 聊天消息响应
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Message message_list = 3; // 消息列表
}

message Message { // 消息
  int64 id = 1; // 消息id
  int64 to_user_id = 2; // 该消息接收者的id
  int64 from_user_id = 3; // 该消息发送者的id
  string content = 4; // 消息内容
  string create_time = 5; // 消息创建时间
}

message douyin_message_action_request { // 用户发送消息操作请求
  string token = 1; // 用户鉴权token
  int64 to_user_id = 2; // 对方用户id
  int32 action_type = 3; // 1-发送消息
  string content = 4; // 消息内容
}

message douyin_message_action_response { // 用户发送消息操作响应
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}
